Fixing the background image shifting when navigating pages

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -34,7 +34,7 @@ body {
 }
 
 #app {
-  background: repeat url('/static/img/dk-monogram-bg.svg') center / 700px var(--black);
+  background: repeat url('/static/img/dk-monogram-bg.svg') top center / 700px var(--black);
   color: white;
 
   @media (min-width: 768px) {
